--- a/buffers/package.json
+++ b/buffers/package.json
@@ -1,15 +1,11 @@
 {
-  "name": "node-step1",
+  "name": "node-step9",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node process"
+    "start": "node index"
   },
-  "keywords": [
-    "simple",
-    "server"
-  ],
   "author": "whitersa",
   "license": "ISC"
 }
